@@ -144,8 +144,8 @@ float: left;
 }
 
 li.li_norm{
-/* border: 2px solid transparent; */
-border: 2px; 
+border: 2px solid transparent; 
+/* border: 2px;  */
 }
 
 li.li_new {
